fixed mobile white space

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,9 @@
 }
 
 .App {
+  position: fixed;
   text-align: center;
+  width: 100%;
   height: 100%;
 }
 
